@@ -1,0 +1,32 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!-- $Id$ -->
+<html lang="en_GB">
+<head>
+<meta name="robots" content="noindex,nofollow">
+<title>SquirrelMail - Developer Documentation</title>
+</head>
+<body text="#000000" bgcolor="#ffffff" link="#0000cc" vlink="#0000cc" alink="#0000cc">
+<img src="../../images/sm_logo.png" alt="SquirrelMail Logo" width="308" height="111" align="right" />
+<h1>SquirrelMail Internals</h1>
+
+<p>This dir has some assorted bits of documentation about SquirrelMail internals, useful for
+people that want to change or extend SquirrelMail.</p>
+
+<p>More information about SquirrelMail development can be found on <a href="http://www.squirrelmail.org/">our
+website</a> and via the <a href="mailto:squirrelmail-devel@lists.sourceforge.net">squirrelmail-devel@lists.sourceforge.net</a> mailinglist (requires subscription before you can post).</p>
+
+<p><a href="plugin.txt">Plugin hooks and functions</a></p>
+
+<p><a href="addressbook.txt">Addressbook internals</a></p>
+
+<p><a href="tree.txt">Mailbox tree functions</a></p>
+
+<p><a href="rfc_documents.txt">List of RFC documents used in SquirrelMail</a></p>
+
+<p><a href="mime.txt">MIME bodystructure handling</a></p>
+
+<p><a href="compose.txt">Creating compose links the right way</a></p>
+
+</body>
+</html>
+
