@@ -5,20 +5,20 @@
 <meta name="robots" content="noindex,nofollow">
 <title>SquirrelMail Documentation</title>
 </head>
-<body>
+<body text="#000000" bgcolor="#ffffff" link="#0000cc" vlink="#0000cc" alink="#0000cc">
+<img src="../images/sm_logo.png" alt="SquirrelMail Logo" width="308" height="111" align="right" />
 
 <h1>SquirrelMail Documentation</h1>
 
 <p>Sorry for the lack of cohesion in the SquirrelMail documentation, but here is a conglomeration
-of all the docs that we have accumulated so far.  Maybe some time in the future we will put
-together a good documentation system.  This is just meant to get you up and running.</p>
-
+of all the docs that we have accumulated so far. We are working on a more comprehensive user
+manual.</p>
 
 <dl>
    <dt><a href="translating.txt">Translating</a></dt>
    <dd>
       If you would like to make a translation of SquirrelMail, here are some guidelines to help
-	  you along the way.  These were compiled, thanks to Gustav Foseid. 
+      you along the way.  These were compiled, thanks to Gustav Foseid.
    </dd>
 
   <dt><a href="translating_help.txt">Translating the Help System</a></dt>
@@ -27,58 +27,63 @@ together a good documentation system.  This is just meant to get you up and runn
       information about translating those help documents.
    </dd>
 
-  <dt><a href="tree.txt">The Mailbox Tree</a></dt>
-   <dd>
-      This explains the algorithms and arrays behind the mailbox tree used in deleting folders.
-	  This was compiled thanks to Nathan Ehresman.
-   </dd>
-
-  <dt><a href="addressbook.txt">The Addressbook</a></dt>
-   <dd>
-      This explains how the addressbook works internally.
-   </dd>
-
-  <dt><a href="mime.txt">MIME</a></dt>
-   <dd>
-      Ever wonder how SquirrelMail handles MIME support?  You need not search
-      any longer.  This document gives an overview of how it works and how
-      we decode MIME encoded messages.
-   </dd>
-
-   <dt><a href="plugin.txt">Plugins</a></dt>
-   <dd>
-      If you would like to create plugins for SquirrelMail, this is the place
-      to start.  It gives an overview and tells what needs to be in place for
-      all plugins.
-   </dd>
-
    <dt><a href="themes.txt">Themes</a></dt>
    <dd>
       You can create your own color themes and add them in the themes/ directory
       if you wish.  This describes the format of the theme files.
    </dd>
 
-   <dt><a href="README.russian_apache">Russian Apache</a></dt>
+   <dt><a href="russian_apache.txt">Russian Apache</a></dt>
    <dd>
       There are special instructions if you are running Russian Apache.  This
-      document, thanks to Konstantin Riabitsev, will help you out. 
+      document, thanks to Konstantin Riabitsev, will help you out.
    </dd>
 
    <dt><a href="authentication.txt">Authentication</a></dt>
    <dd>
      SquirrelMail allows you to log in to your IMAP and SMTP servers using
-	 plaintext, CRAM-MD5 or DIGEST-MD5, as well as use SSL for extra security.
-	 This document describes how to use this new code, and the requirements.
+     plaintext, CRAM-MD5 or DIGEST-MD5, as well as use SSL for extra security.
+     This document describes how to use this new code, and the requirements.
    </dd>
 
-   <dt>Basic documentation that comes with distrbution:</dt>
+   <dt><a href="db-backend.txt">Database Backend</a></dt>
+   <dd>
+     SquirrelMail allows you to store user's preferences and address books
+     in database that is compatible with PHP Pear DB libraries. This document
+     describes how to setup database.
+   </dd>
+
+   <dt><a href="presets.txt">Specific IMAP server setups</a></dt>
+   <dd>
+     SquirrelMail configuration utility allows adjusting settings for selected
+     IMAP server with one quick command. D command asks for IMAP server name and
+     modifies all settings that are specific to selected IMAP server. This
+     document provides quick description of all IMAP presets.
+   </dd>
+
+   <dt><a href="ie_ssl.txt">Internet Explorer and SSL</a></dt>
+   <dd>
+     Information about possible issues in Internet Explorer, when SquirrelMail
+     is used in SSL enabled webserver.
+   </dd>
+
+   <dt><a href="Development/">SquirrelMail Development</a></dt>
+   <dd>
+     Want to code on SquirrelMail? Change behaviour or fix bugs? Create your own
+     plugin? See this set of documentation for some pointers.
+   </dd>
+
+   <dt>Basic documentation that comes with distribution:</dt>
    <dd>
       <a href="../AUTHORS">AUTHORS</a> - Who's behind all this?<br />
       <a href="../INSTALL">INSTALL</a> - Installation instructions<br />
       <a href="../UPGRADE">UPGRADE</a> - Upgrading instructions<br />
       <a href="../README">README</a> - Everyone should read this.<br />
       <a href="../COPYING">COPYING</a> - Licencing of SquirrelMail<br/>
-      <a href="../ChangeLog">ChangeLog</a> - Differences between SquirrelMail versions.<br />
+      <a href="../ChangeLog">ChangeLog</a> - Differences between SquirrelMail
+      versions.<br />
+      <a href="../ReleaseNotes">ReleaseNotes</a> - SquirrelMail release notes.<br />
+      <a href="ReleaseNotes/">ReleaseNotes archive</a> - Notes for older SquirrelMail versions<br />
    </dd>
 </dl>
 
